[POC/backstop-dev-testing] - Fixed padding issues with hero using image on mobile and desktop

--- a/app/assets/components/nhsuk-hee/nhsuk-hee-hero/_hero.scss
+++ b/app/assets/components/nhsuk-hee/nhsuk-hee-hero/_hero.scss
@@ -11,6 +11,10 @@
 
 .nhsuk-hero--image-description {
   margin-bottom: 80px;
+
+  @include mq($from: tablet) {
+    margin-bottom: 100px;
+  }
 }
 
 .nhsuk-hee-hero {
